docs/api/qiskit/0.37/qiskit.circuit.library.IQP.mdx
---
title: IQP
description: API reference for qiskit.circuit.library.IQP
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.IQP
---

# IQP

<Class id="qiskit.circuit.library.IQP" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/circuit/library/iqp.py" signature="IQP(interactions)">
  Bases: [`qiskit.circuit.quantumcircuit.QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")

  Instantaneous quantum polynomial (IQP) circuit.

  The circuit consists of a column of Hadamard gates, a column of powers of T gates, a sequence of powers of CS gates (up to $\frac{n^2-n}{2}$ of them), and a final column of Hadamard gates, as introduced in \[1].

  The circuit is parameterized by an n x n interactions matrix. The powers of each T gate are given by the diagonal elements of the interactions matrix. The powers of the CS gates are given by the upper triangle of the interactions matrix.

  **Reference Circuit:**

  ![../\_images/qiskit.circuit.library.IQP\_0\_0.png](/images/api/qiskit/0.37/qiskit.circuit.library.IQP_0_0.png)

  **Expanded Circuit:**

  >

  **References:**

  \[1] M. J. Bremner et al. Average-case complexity versus approximate simulation of commuting quantum computations, Phys. Rev. Lett. 117, 080501 (2016). [arXiv:1504.07999](https://arxiv.org/abs/1504.07999)

  Create IQP circuit.

  **Parameters**

  **interactions** (`Union`\[`List`, `array`]) – input n-by-n symmetric matrix.

  **Raises**

  **CircuitError** – if the inputs is not as symmetric matrix.

  ## Attributes

  ### ancillas

  <Attribute id="qiskit.circuit.library.IQP.ancillas" name="ancillas">
    Returns a list of ancilla bits in the order that the registers were added.

    **Return type**

    `List`\[[`AncillaQubit`](qiskit.circuit.AncillaQubit "qiskit.circuit.quantumregister.AncillaQubit")]
  </Attribute>

  ### calibrations

  <Attribute id="qiskit.circuit.library.IQP.calibrations" name="calibrations">
    Return calibration dictionary.

    **The custom pulse definition of a given gate is of the form**

    \{‘gate\_name’: \{(qubits, params): schedule}}

    **Return type**

    `dict`
  </Attribute>

  ### clbits

  <Attribute id="qiskit.circuit.library.IQP.clbits" name="clbits">
    Returns a list of classical bits in the order that the registers were added.

    **Return type**

    `List`\[[`Clbit`](qiskit.circuit.Clbit "qiskit.circuit.classicalregister.Clbit")]
  </Attribute>

  ### data

  <Attribute id="qiskit.circuit.library.IQP.data" name="data">
    Return the circuit data (instructions and context).

    **Returns**

    a list-like object containing the [`CircuitInstruction`](qiskit.circuit.CircuitInstruction "qiskit.circuit.CircuitInstruction")s for each instruction.

    **Return type**

    QuantumCircuitData
  </Attribute>

  ### extension\_lib

  <Attribute id="qiskit.circuit.library.IQP.extension_lib" name="extension_lib" attributeValue="= 'include &#x22;qelib1.inc&#x22;;'" />

  ### global\_phase

  <Attribute id="qiskit.circuit.library.IQP.global_phase" name="global_phase">
    Return the global phase of the circuit in radians.

    **Return type**

    `Union`\[[`ParameterExpression`](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression"), `float`]
  </Attribute>

  ### header

  <Attribute id="qiskit.circuit.library.IQP.header" name="header" attributeValue="= 'OPENQASM 2.0;'" />

  ### instances

  <Attribute id="qiskit.circuit.library.IQP.instances" name="instances" attributeValue="= 87" />

  ### metadata

  <Attribute id="qiskit.circuit.library.IQP.metadata" name="metadata">
    The user provided metadata associated with the circuit

    The metadata for the circuit is a user provided `dict` of metadata for the circuit. It will not be used to influence the execution or operation of the circuit, but it is expected to be passed between all transforms of the circuit (ie transpilation) and that providers will associate any circuit metadata with the results it returns from execution of that circuit.

    **Return type**

    `dict`
  </Attribute>

  ### num\_ancillas

  <Attribute id="qiskit.circuit.library.IQP.num_ancillas" name="num_ancillas">
    Return the number of ancilla qubits.

    **Return type**

    `int`
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.IQP.num_clbits" name="num_clbits">
    Return number of classical bits.

    **Return type**

    `int`
  </Attribute>

  ### num\_parameters

  <Attribute id="qiskit.circuit.library.IQP.num_parameters" name="num_parameters">
    The number of parameter objects in the circuit.

    **Return type**

    `int`
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.IQP.num_qubits" name="num_qubits">
    Return number of qubits.

    **Return type**

    `int`
  </Attribute>

  ### op\_start\_times

  <Attribute id="qiskit.circuit.library.IQP.op_start_times" name="op_start_times">
    Return a list of operation start times.

    This attribute is enabled once one of scheduling analysis passes runs on the quantum circuit.

    **Return type**

    `List`\[`int`]

    **Returns**

    List of integers representing instruction start times. The index corresponds to the index of instruction in `QuantumCircuit.data`.

    **Raises**

    **AttributeError** – When circuit is not scheduled.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.circuit.library.IQP.parameters" name="parameters">
    The parameters defined in the circuit.

    This attribute returns the [`Parameter`](qiskit.circuit.Parameter "qiskit.circuit.Parameter") objects in the circuit sorted alphabetically. Note that parameters instantiated with a [`ParameterVector`](qiskit.circuit.ParameterVector "qiskit.circuit.ParameterVector") are still sorted numerically.

    **Examples**

    The snippet below shows that insertion order of parameters does not matter.

    ```python
    >>> from qiskit.circuit import QuantumCircuit, Parameter
    >>> a, b, elephant = Parameter("a"), Parameter("b"), Parameter("elephant")
    >>> circuit = QuantumCircuit(1)
    >>> circuit.rx(b, 0)
    >>> circuit.rz(elephant, 0)
    >>> circuit.ry(a, 0)
    >>> circuit.parameters  # sorted alphabetically!
    ParameterView([Parameter(a), Parameter(b), Parameter(elephant)])
    ```

    Bear in mind that alphabetical sorting might be unituitive when it comes to numbers. The literal “10” comes before “2” in strict alphabetical sorting.

    ```python
    >>> from qiskit.circuit import QuantumCircuit, Parameter
    >>> angles = [Parameter("angle_1"), Parameter("angle_2"), Parameter("angle_10")]
    >>> circuit = QuantumCircuit(1)
    >>> circuit.u(*angles, 0)
    >>> circuit.draw()
       ┌─────────────────────────────┐
    q: ┤ U(angle_1,angle_2,angle_10) ├
       └─────────────────────────────┘
    >>> circuit.parameters
    ParameterView([Parameter(angle_1), Parameter(angle_10), Parameter(angle_2)])
    ```

    To respect numerical sorting, a [`ParameterVector`](qiskit.circuit.ParameterVector "qiskit.circuit.ParameterVector") can be used.

    ```python
    ```

    ```python
    >>> from qiskit.circuit import QuantumCircuit, Parameter, ParameterVector
    >>> x = ParameterVector("x", 12)
    >>> circuit = QuantumCircuit(1)
    >>> for x_i in x:
    ...     circuit.rx(x_i, 0)
    >>> circuit.parameters
    ParameterView([
        ParameterVectorElement(x[0]), ParameterVectorElement(x[1]),
        ParameterVectorElement(x[2]), ParameterVectorElement(x[3]),
        ..., ParameterVectorElement(x[11])
    ])
    ```

    **Return type**

    `ParameterView`

    **Returns**

    The sorted [`Parameter`](qiskit.circuit.Parameter "qiskit.circuit.Parameter") objects in the circuit.
  </Attribute>

  ### prefix

  <Attribute id="qiskit.circuit.library.IQP.prefix" name="prefix" attributeValue="= 'circuit'" />

  ### qubits

  <Attribute id="qiskit.circuit.library.IQP.qubits" name="qubits">
    Returns a list of quantum bits in the order that the registers were added.

    **Return type**

    `List`\[[`Qubit`](qiskit.circuit.Qubit "qiskit.circuit.quantumregister.Qubit")]
  </Attribute>
</Class>

